Bug 73637 - SIGSEGV in evdev_process_touch when original output is plugged back
Summary: SIGSEGV in evdev_process_touch when original output is plugged back
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-14 23:10 UTC by Anu Reddy
Modified: 2014-01-21 21:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
weston crahses on touching original display icons (6.13 KB, text/plain)
2014-01-14 23:17 UTC, Anu Reddy
Details

Description Anu Reddy 2014-01-14 23:10:35 UTC
Steps:
1. Identify primary as display1 and secondary as display2
2. Launch Weston
3. Unplug display1. Mouse pointer moves to display2.
4. Plug display1
5. Launch terminal from display1 by touching the toolbar icon
6. Observe Weston crash. This crash happens when display1 toolbar icons are touched.

Software Stack
wayland (HEAD) 1.3.92-0-gc102c20
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g3a62718
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) 1.3.92-0-gb637a40
Comment 1 Anu Reddy 2014-01-14 23:17:57 UTC
Created attachment 92101 [details]
weston crahses on touching original display icons
Comment 2 Kristian Høgsberg 2014-01-17 20:03:15 UTC
commit 17bccaed428ac1f6ec9f8e667175ad81e90508ff
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Thu Jan 16 16:46:28 2014 -0800

    input: Handle unplugging the output for a touchscreen device
    
    A paired touch screen will stop sending events if its corresponding
    output is unplugged.  An unpaired touchscreen will pick the new primary
    output.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=73637


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.